# pings

./: .env  Cargo.toml  README.md
migrations/20170407064605_create_pings/: down.sql  up.sql
src/: lib.rs  main.rs  pings.rb
